src/less/5-modules/_tree.less
/* ----------------------------------------------------------- */
/* == menu item */
/* ----------------------------------------------------------- */

.tree > [data-level] {
  display: flex;
  background-color: #fafafa;
  border: 1px solid #edf1f4;
  margin-bottom: 1rem;
  align-items: center;
}

.tree--draggable .treeItem__label {
  cursor: grab;
}

.treeItem__label {
  flex: 1;
  margin-left: 1.5rem;
}

.treeItem__action {
  text-align: center;
  width: 5rem;
  background-color: @btn-action;
  color: #fff;
  padding: 1.2rem .5rem;
  font-size: 1.8rem;
}


/* level
-------------------------------------------------------------- */

[data-level="1"] {
  margin-left: 0;
}

[data-level="2"] {
  margin-left: 5rem;
}

[data-level="3"] {
  margin-left: 10rem;
}

[data-level="4"] {
  margin-left: 15rem;
}

